[tool.poetry]
name = "terraform_aws_mesh_common"
version = "0.0.7"
description = ""
authors = ["mesh"]
license = "MIT"
packages = [
]
readme = "README.md"

[tool.poetry.dependencies]
# core dependencies
python = ">=3.10,<4.0"

[tool.poetry.group.dev.dependencies]
pre-commit= "^3.3.3"

[tool.poetry-dynamic-versioning]
enable = true
metadata = false
vcs = "git"
style = "pep440"
format-jinja = """
    {%- if distance == 0 -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- else -%}
        {{ serialize_pep440(bump_version(base), stage, revision, dev=timestamp) }}
    {%- endif -%}
"""

[tool.poetry-dynamic-versioning.substitution]
folders = [
    { path = "./" }
]

[build-system]
requires = ["poetry>=1.2", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
